--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.2.3
   flutter_launcher_icons: ^0.13.1
   change_app_package_name: ^1.1.0
+  path_provider: ^2.1.2
 
 flutter_launcher_icons:
   android: true
